# AITemplate

./: .flake8  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  README.md  ai_toolkit.py  default.nix  test.py
fx2ait/: CMakeLists.txt  README.md  setup.py
fx2ait/fx2ait/: TARGETS  __init__.py  ait_module.py  ait_splitter.py  cache.py  extension.py  find_batch_size_dim.py  fx2ait.py  tensor_spec.py  utils.py
fx2ait/fx2ait/acc_tracer/: __init__.py  acc_normalizer.py  acc_op_properties.py  acc_ops.py  acc_shape_prop.py  acc_tracer.py  acc_utils.py  ait_acc_normalizer.py  ait_acc_ops.py  ait_acc_ops_registry.py
fx2ait/fx2ait/converters/: __init__.py  ait_converters.py  ait_module_converters.py  aten2ait_converters.py  converter_registry.py  utils.py
fx2ait/fx2ait/csrc/: AITModel.cpp  AITModel.h  AITModelImpl.cpp  AITModelImpl.h  TARGETS
fx2ait/fx2ait/example/: benchmark_utils.py
fx2ait/fx2ait/example/01_transformer_model/: README.md  test_transformer_encoder.py
fx2ait/fx2ait/example/02_vision_model/: README.md  test_vision_model.py
fx2ait/fx2ait/example/03_lowering_split/: README.md  test_lower.py
fx2ait/fx2ait/lower/: __init__.py  lower.py  lower_settings.py
fx2ait/fx2ait/passes/: lower_basic_pass_aten.py
fx2ait/fx2ait/test/: TARGETS  __init__.py  test_ait_lower.py  test_ait_splitter.py  test_fx2ait.py  test_tensor_spec.py
fx2ait/fx2ait/test/converters/: test_ait_adaptive_avg_pool2d.py  test_ait_avg_pool2d.py  test_ait_cast.py  (+46 more)
fx2ait/fx2ait/tools/: ait_minimizer.py  ait_subgraph_rewriter.py  common_aten2ait.py  common_fx2ait.py
(+1306 files in other folders)
